manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{img_lowercase_name}#
  namespace: #{namespace_aks}#
spec:
  replicas: #{replicas}#
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%  
  selector:
    matchLabels:
      app: #{img_lowercase_name}#
  template:
    metadata:
      labels:
        app: #{img_lowercase_name}#
        releaseId: "#{Release.ReleaseId}#"
    
    spec:
      containers:
      - name: #{img_lowercase_name}#
        image: #{a8k}#/#{img_lowercase_name}#:#{BuildVersion}#
        imagePullPolicy: Always
        #volumeMounts:
        #- name: config-volume
        #  mountPath: /app/assets/config/
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /api/version
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20
        metrics:
          - name: custom-metric
            path: /metrics
