manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: #{namespace_aks}#
  name: #{img_lowercase_name}# 
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    alb.ingress.kubernetes.io/healthcheck-path: /version
#spec:
#  type: ClusterIP
#  ports:
#  - port: 80
#  selector:
#    app: #{img_lowercase_name}#
spec:
  type: NodePort
  selector:
    app: #{img_lowercase_name}#
  ports:
    - port: 80
      targetPort: 80
